# vocrep

./: .gitignore  .npmrc  AGENTS.md  README.md  design-qa.md  eslint.config.js  package-lock.json  package.json  vite.config.mjs
.github/workflows/: ci.yml  windows-installer.yml
docs/: NATIVE_SHELL_METADATA.md  PRODUCT_FOUNDATION.md  phase-12-release-note.md  phase-12-status.md  phase-12-validation-2.md  phase-12-validation.md  phase-12.md
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: demoTracks.js
src/lib/: audioFiles.js
